Revert "Branching to release/delegate/815xx. New version 816xx"
This reverts commit e42cc960dcf403e946928aef23976c4123672ec8.